src/deploy/kubernetes/infra/06_addons/istio/02_addons/addons/ingress/kiali-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

#    nginx.ingress.kubernetes.io/rewrite-target: /\$2

    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret


spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali.istio-system
                port:
                  number: 20001
